[tool.poetry]
name = "backend-service"
version = "0.1.0"
description = ""
authors = ["DatAction-Arne <96430642+DatAction-Arne@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "backend_service"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
numpy = "^1.24.2"
pandas = "^2.0.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
